--- a/css/styles.sass
+++ b/css/styles.sass
@@ -27,6 +27,7 @@ $green: #7FC356
 
 .container
     color: #333
+    padding-top: 100px
 
 .section
     padding: 50px 0
@@ -53,12 +54,12 @@ h1
         z-index: 98
         position: absolute
         height: 55px
-        display: none
         background: $green
 
     .container
         z-index: 99
         position: relative
+        padding-top: 0
 
 
 .navbar-default
@@ -73,73 +74,21 @@ h1
 
 // Slider
 
-.cover
-    height: 450px
-    overflow: hidden
-    position: relative
-    z-index: 50
-
-.rslides 
-    position: relative
-    list-style: none
-    overflow: hidden
-    width: 100%
-    padding: 0
-    margin: 0
+.banner
 
     li
-        -webkit-backface-visibility: hidden
-        position: absolute
-        display: none
-        width: 100%
-        left: 0
-        top: 0
-
-    li:first-child
-        position: relative
-        display: block
-        float: left
-
+        max-height: 450px
+        overflow: hidden
     img
-        display: block
-        height: auto
-        float: left
         width: 100%
-        border: 0
 
-.caption
-    position: absolute
-    right: 50px
-    top: 370px
-    z-index: 99
-    padding: 20px 25px
-    color: #fff
-    background: $green
-    font-size: 18px
-    font-weight: 600
+    .caption
+        position: absolute
+        top: 300px
+        width: 400px
+        margin: 0 auto
+        color: #fff
+        text-align: center
+        background: $green
+        padding: 30px
 
-.rslides_tabs
-    position: absolute
-    z-index: 98
-    bottom: 30px
-    width: 100%
-    text-align: center
-    
-    li 
-        display: inline-block
-
-        &.rslides_here a
-            background: #fff
-
-        a
-            border: 2px solid #fff
-            display: block
-            width: 12px
-            height: 12px
-            font-size: 0px
-            margin: 0 10px
-            +border-radius(100%)
-            transition: all .2s
-
-            &:hover
-                background: #fff
