--- a/includes/navigation.html
+++ b/includes/navigation.html
@@ -9,15 +9,15 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">SRI-Rice</a>
+      <a class="navbar-brand" href="./index.php">SRI-Rice</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">About SRI</a></li>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Projects</a></li>
+        <li><a href="./aboutsri.php">About SRI</a></li>
+        <li><a href="./aboutus.php">About Us</a></li>
+        <li><a href="./projects.php">Projects</a></li>
 
       </ul>
     </div><!-- /.navbar-collapse -->
