--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,9 @@
 
 h1 {
   font-size: 30px;
-  font-weight: 600; }
+  font-weight: 600;
+  text-align: center;
+  margin: 10px 0 30px; }
 
 .navbar {
   -moz-border-radius: 0;
@@ -55,5 +57,25 @@ h1 {
   text-align: center;
   background: #7FC356;
   padding: 30px; }
+
+.people_wrap {
+  text-align: center;
+  border: 1px solid #eee;
+  padding: 30px 15px;
+  height: 400px; }
+  .people_wrap .people_img {
+    width: 100px;
+    height: 100px;
+    display: inline-block;
+    margin-bottom: 20px; }
+    .people_wrap .people_img img {
+      width: 100%;
+      -moz-border-radius: 100%;
+      -webkit-border-radius: 100%;
+      -ms-border-radius: 100%;
+      border-radius: 100%; }
+  .people_wrap .people_name {
+    margin-bottom: 10px;
+    font-weight: 600; }
 
 /*# sourceMappingURL=styles.css.map */
