--- a/css/styles.sass
+++ b/css/styles.sass
@@ -38,6 +38,8 @@ $green: #7FC356
 h1
     font-size: 30px
     font-weight: 600
+    text-align: center
+    margin: 10px 0 30px
 
 
 // Navigation Bar
@@ -92,3 +94,25 @@ h1
         background: $green
         padding: 30px
 
+
+// About Us People
+
+.people_wrap
+    text-align: center
+    border: 1px solid #eee
+    padding: 30px 15px
+    height: 400px
+
+    .people_img
+        width: 100px
+        height: 100px
+        display: inline-block
+        margin-bottom: 20px
+
+        img
+            width: 100%
+            +border-radius(100%)
+
+    .people_name
+        margin-bottom: 10px
+        font-weight: 600
