--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,20 @@ h1 {
   text-align: center;
   margin: 10px 0 30px; }
 
+.button {
+  display: block;
+  background: #7FC356;
+  color: #fff;
+  padding: 10px 15px;
+  width: 100px;
+  text-align: center;
+  box-sizing: border-box;
+  text-transform: uppercase;
+  font-weight: 600;
+  margin: 20px auto; }
+  .button:hover {
+    color: #fff; }
+
 .navbar {
   -moz-border-radius: 0;
   -webkit-border-radius: 0;
@@ -75,7 +89,10 @@ h1 {
       -ms-border-radius: 100%;
       border-radius: 100%; }
   .people_wrap .people_name {
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     font-weight: 600; }
+  .people_wrap .people_job {
+    margin: 5px 0;
+    font-style: italic; }
 
 /*# sourceMappingURL=styles.css.map */
