--- a/css/styles.sass
+++ b/css/styles.sass
@@ -32,6 +32,9 @@ $green: #7FC356
 .section
     padding: 50px 0
 
+.c
+    text-align: center
+
 p.big
     font-family: "PT Serif"
     font-size: 20px
@@ -144,3 +147,9 @@ h1
     .people_job
         margin: 5px 0
         font-style: italic
+
+// Projects
+
+.project_img
+    opacity: .4
+    max-width: 55px
