--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,9 @@
 .section {
   padding: 50px 0; }
 
+.c {
+  text-align: center; }
+
 p.big {
   font-family: "PT Serif";
   font-size: 20px;
@@ -108,5 +111,9 @@ h1 {
   .people_wrap .people_job {
     margin: 5px 0;
     font-style: italic; }
+
+.project_img {
+  opacity: 0.4;
+  max-width: 55px; }
 
 /*# sourceMappingURL=styles.css.map */
