--- a/css/styles.css
+++ b/css/styles.css
@@ -6,13 +6,45 @@
 .container {
   color: #333;
   padding: 40px 0;
-  font-size: 16px;
+  font-size: 15px;
   line-height: 1.5em; }
   .container.main {
     padding-top: 100px; }
 
-.g {
-  background: #f8f8f8; }
+.col-sm-4 {
+  padding: 0 25px; }
+
+.colored {
+  background: #f8f8f8;
+  position: relative;
+  overflow: hidden;
+  z-index: 10; }
+  .colored.black {
+    background: #444; }
+    .colored.black * {
+      color: #fff; }
+
+.colored::before {
+  content: "";
+  opacity: 0.15;
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background-size: cover; }
+
+#sri-plants {
+  background: #31200A; }
+
+#sri-plants::before {
+  background: url("../img/backgrounds/sri-plants.jpg"); }
+
+#field {
+  background: #AD7510; }
+
+#field::before {
+  background: url("../img/backgrounds/field.jpg"); }
 
 .section {
   padding: 50px 0; }
@@ -25,7 +57,7 @@
 
 p.big {
   font-size: 18px;
-  width: 80%;
+  width: 70%;
   margin: 10px auto 40px;
   line-height: 1.5em; }
 
@@ -100,7 +132,7 @@ h3 {
     color: #fff; }
 
 .banner li {
-  max-height: 450px;
+  max-height: 400px;
   overflow: hidden; }
 .banner img {
   width: 100%; }
@@ -158,7 +190,9 @@ h2.projects {
   -ms-border-radius: 5px;
   border-radius: 5px;
   margin-right: 20px;
-  position: relative; }
+  position: relative;
+  font-size: 14px;
+  background: #fff; }
 
 .project-box img {
   max-width: 100%; }
