--- a/includes/navigation.html
+++ b/includes/navigation.html
@@ -15,7 +15,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="./aboutsri.php">About SRI</a></li>
+        <li><a href="./aboutsri.php">What is SRI?</a></li>
         <li><a href="./impact.php">Global Impact</a></li>
         <li><a href="./aboutus.php">About Us</a></li>
         <li><a href="./projects.php">Projects</a></li>
