--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,9 @@
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,300,600,700,900);
 @import url(https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700,700italic);
-* {
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700);
+@import url(https://fonts.googleapis.com/css?family=Homenaje);
+.page {
+  margin-top: 54px;
   font-family: "Open Sans"; }
 
 .container {
@@ -10,6 +13,38 @@
   line-height: 1.5em; }
   .container.main {
     padding-top: 100px; }
+
+.section.g {
+  background: #7FC356; }
+.section.o {
+  background: #E89E41; }
+.section * {
+  color: #fff; }
+.section:after {
+  content: "";
+  display: block;
+  left: 50%;
+  margin-left: -20px;
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-left: 20px solid transparent;
+  border-right: 20px solid transparent;
+  border-top: 20px solid #7FC356; }
+
+.message {
+  margin-bottom: 40px; }
+  .message * {
+    color: rgba(255, 255, 255, 0.9); }
+  .message b {
+    color: #fff; }
+
+.r90 {
+  width: 90%;
+  margin: 0 auto; }
+
+.row.padding .col-sm-6 {
+  padding: 0 30px; }
 
 .col-sm-4 {
   padding: 0 25px; }
@@ -46,14 +81,14 @@
 #field::before {
   background: url("../img/backgrounds/field.jpg"); }
 
-.section {
-  padding: 50px 0; }
-
 .r {
   text-align: right; }
 
 .c {
   text-align: center; }
+
+.l {
+  text-align: left !important; }
 
 p.big {
   font-size: 18px;
@@ -61,17 +96,49 @@ p.big {
   margin: 10px auto 40px;
   line-height: 1.5em; }
 
+p.main {
+  font-size: 20px;
+  width: 70%;
+  margin: 10px auto 40px;
+  line-height: 1.6em; }
+
 p {
-  margin-bottom: 0; }
+  margin: 10px 0;
+  font-size: 17px;
+  line-height: 1.5em;
+  font-weight: 300;
+  color: #000; }
+  p b {
+    font-weight: 400; }
+
+p.med {
+  width: 70%;
+  margin: 10px auto 20px;
+  line-height: 1.5em; }
+
+.row.sm p {
+  font-size: 15px; }
 
 h1 {
   text-align: center;
   margin: 10px 0 40px; }
 
+h4 {
+  font-size: 15px;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-align: center;
+  color: #999;
+  margin: 20px 0 25px; }
+
 h3 {
-  font-size: 22px;
-  margin: 20px 0 20px;
-  font-weight: bold; }
+  font-family: "Homenaje";
+  margin: 10px 0;
+  font-weight: 400;
+  font-size: 32px;
+  text-align: center;
+  margin: 20px 0 15px;
+  line-height: 1.3em; }
 
 .button-wrap {
   text-align: center;
@@ -110,18 +177,29 @@ h3 {
   position: fixed;
   z-index: 99;
   width: 100%;
-  border: none; }
+  border: none;
+  top: 0; }
   .navbar .nav-background {
     width: 100%;
     z-index: 98;
     position: absolute;
-    height: 55px;
-    background: #7FC356; }
+    height: 54px;
+    background: #E89E41; }
   .navbar .container {
     z-index: 99;
     position: relative;
     padding-top: 0;
     font-size: 13px; }
+  .navbar li {
+    padding: 2px 0; }
+  .navbar li:hover {
+    background: #FFC459; }
+  .navbar a {
+    color: #fff !important; }
+
+em {
+  font-style: normal;
+  font-weight: 600; }
 
 .navbar-default {
   background: none;
@@ -145,6 +223,26 @@ h3 {
   text-align: center;
   background: #7FC356;
   padding: 30px; }
+
+.top-banner {
+  height: 400px;
+  background-size: cover !important; }
+
+.img-banner {
+  height: 350px;
+  background-size: cover !important; }
+
+#about-us {
+  background: url("../img/group.jpg") no-repeat; }
+
+#vision {
+  background: url("../img/about.jpg") no-repeat; }
+
+#activities {
+  background: url("../img/backgrounds/about2.jpg") no-repeat; }
+
+#benefits {
+  background: url("../img/group.jpg") no-repeat; }
 
 .people_wrap {
   text-align: center;
